Deployment from Statiq

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                                             <a href="/setup/uwp">Platform - UWP</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/advanced">Advanced Dependency Injection</a>
+                                                            <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
@@ -299,9 +299,6 @@
                                                             <a href="/sensors/gyroscope">Gyroscope</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/sensors/heartrate">Heart Rate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/sensors/humidity">Humidity</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -351,7 +348,53 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
-                                    <p>HELLO WORLD</p>
+                                    <img src="assets/logo.svg" width="100" /> 
+<p>Shiny is a cross platform framework designed for Xamarin &amp; UWP to make working with device services and background processes easy, testable, and consistent while bringing
+things like dependency injection &amp; logging in a structured way to your code!</p>
+<h2 id="features">Features</h2>
+<ul>
+<li>Handles all of the cruft like Permissions, main thread traversal, persistent storage and app restarts</li>
+<li>Brings your infrastructure to the background</li>
+<li>Provides logging to ensure you know when your services fail in the background</li>
+<li>Gives a clean &amp; testable API surface for your code</li>
+<li>BLE Client &amp; Hosting</li>
+<li>Beacons Ranging &amp; Monitoring</li>
+<li>Locations - GPS, Geofencing, &amp; Activity Monitoring (driving, walking, etc)</li>
+<li>Local Notifications</li>
+<li>Push Notification - Native, Azure Notifications Hubs, Firebase, and more</li>
+<li>Local Notifications - best of breed local notifications supporting almost all features across all of the supported platforms</li>
+<li>Near Field Communications (NFC) - easy to use NFC tag reader</li>
+</ul>
+<h2 id="builds">Builds</h2>
+<table>
+<thead>
+<tr>
+<th>Branch</th>
+<th>Status</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Master</td>
+<td><img src="https://img.shields.io/github/workflow/status/shinyorg/shiny/Build/master?style=for-the-badge" alt="Build" /></td>
+</tr>
+<tr>
+<td>Dev</td>
+<td><img src="https://img.shields.io/github/workflow/status/shinyorg/shiny/Build/dev?style=for-the-badge" alt="Build" /></td>
+</tr>
+<tr>
+<td>Preview</td>
+<td><img src="https://img.shields.io/github/workflow/status/shinyorg/shiny/Build/preview?style=for-the-badge" alt="Build" /></td>
+</tr>
+</tbody>
+</table>
+<h2 id="contributors">Contributors</h2>
+<ul>
+<li><a href="https://github.com/aritchie">Allan Ritchie</a> - Project Lead</li>
+<li><a href="https://github.com/dansiegel">Dan Siegel</a> - Contributor</li>
+<li><a href="https://github.com/emilystanek">Emily Stanek</a> - Logo Designer</li>
+<li><a href="https://twitter.com/dahlbyk">Keith Dahlby</a> - Contributor</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
@@ -363,9 +406,9 @@
     </div>
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
-            <div>hiny
-                <span>© 2021 S</span>
-                <span class="float-right" style="color: #888888;"></span>
+            <div>
+                <span>© 2021 Shiny.NET</span>
+                <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
     </div>
