--- a/setup/statics.html
+++ b/setup/statics.html
@@ -91,7 +91,7 @@
                                                             <a href="/setup/uwp">Platform - UWP</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/advanced">Advanced Dependency Injection</a>
+                                                            <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
@@ -299,9 +299,6 @@
                                                             <a href="/sensors/gyroscope">Gyroscope</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/sensors/heartrate">Heart Rate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/sensors/humidity">Humidity</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -417,6 +414,46 @@ ShinyJobs.Run(...);
 <td>ShinyPush</td>
 </tr>
 <tr>
+<td>Shiny.Sensors.IAccelerometer</td>
+<td>ShinyAccelerometer</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IAmbientLight</td>
+<td>ShinyAmbientLight</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IBarometer</td>
+<td>ShinyBarometer</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.ICompass</td>
+<td>ShinyCompass</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IGyroscope</td>
+<td>ShinyGyroscope</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IHumidity</td>
+<td>ShinyHumidity</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IMagnetometer</td>
+<td>ShinyMagnetometer</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IPedometer</td>
+<td>ShinyPedometer</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.IProximity</td>
+<td>ShinyProximity</td>
+</tr>
+<tr>
+<td>Shiny.Sensors.ITemperature</td>
+<td>ShinyTemperature</td>
+</tr>
+<tr>
 <td>Shiny.SpeechRecognition.ISpeechRecognizer</td>
 <td>ShinySpeechRecognition</td>
 </tr>
@@ -437,9 +474,9 @@ ShinyJobs.Run(...);
     </div>
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
-            <div>hiny
-                <span>© 2021 S</span>
-                <span class="float-right" style="color: #888888;"></span>
+            <div>
+                <span>© 2021 Shiny.NET</span>
+                <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
     </div>
