--- a/setup/di.html
+++ b/setup/di.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Heart Rate</title>
+    <title>Shiny.NET - Dependency Injection</title>
 </head>
 <body class="d-flex flex-column">
     <div class="flex-grow-1 d-flex flex-column">
@@ -52,7 +52,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Heart Rate</div>
+                                <div class="text-white m-0 title">Dependency Injection</div>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
 <a href="/quickstart">Quick Start</a>                                            </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/setup">Setup</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
@@ -90,8 +90,8 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/uwp">Platform - UWP</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/setup/advanced">Advanced Dependency Injection</a>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
@@ -279,7 +279,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/sensors/getting-started">Getting Started</a>
                                                         </div>
@@ -297,9 +297,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/sensors/gyroscope">Gyroscope</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/sensors/heartrate">Heart Rate</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/sensors/humidity">Humidity</a>
@@ -351,32 +348,64 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
-                                    <table>
-<thead>
-<tr>
-<th>Platform</th>
-<th>Version</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Android</td>
-<td>5</td>
-</tr>
-<tr>
-<td>tizen</td>
-<td>4</td>
-</tr>
-<tr>
-<td>watchOS</td>
-<td>5</td>
-</tr>
-</tbody>
-</table>
-<h3 id="watchos">watchOS</h3>
-<p>TODO</p>
-<h3 id="tizen">Tizen</h3>
-<p>TODO</p>
+                                    <h2 id="modules">Modules</h2>
+<p>Modules are handy little things that allows your library to inject other services it may need into the container so that they can be used.  This way, you are able to keep loose coupling on your libraries</p>
+<pre><code class="language-cs">using Shiny;
+using Microsoft.Extensions.DependencyInjection;
+
+public class YourModule : ShinyModule
+{
+    public override void Register(IServiceCollection services, IPlatform platform)
+    {
+
+    }
+}
+</code></pre>
+<h2 id="startup-tasks">Startup Tasks</h2>
+<p>Startup tasks are great for wiring up events and spinning up infrastructure.  These fire immediately after the container is built.  However, don't do any sort of blocking operation in them as this will cause your app to pause starting up causing a poor user experience.</p>
+<p><strong>CAUTION:</strong> You can do async processes here, but your app could start before the process finishes, so if you are pre-loading data, it may not be ready for use before your app starts</p>
+<pre><code class="language-cs">using Shiny;
+
+public class YourStartupTask : IShinyStartupTask
+{
+    // you can inject into the constructor here as long as you register the service in the startup
+    public void Start()
+    {
+
+    }
+}
+</code></pre>
+<h2 id="state-restorable-services">State Restorable Services</h2>
+<p>This is pretty cool, imagine you want the state of your service preserved across restarts - Shiny does this in epic fashion</p>
+<p>Simply turn your service implement INotifyPropertyChanged (or the easy Shiny.NotifyPropertyChanged) and register it in your shiny startup and Shiny will take care of the rest</p>
+<pre><code class="language-cs">using Shiny;
+
+#region RestorableServices
+public class MyBadAssService :
+    NotifyPropertyChanged,
+    IMyBadAssService,
+    IShinyStartupTask
+{
+    int count;
+
+    public int Count
+    {
+        get =&gt; this.count;
+        set =&gt; this.Set(ref this.count, value);
+    }
+
+    public void Start()
+    {
+        this.Count++;
+    }
+}
+
+#endregion
+
+public interface IMyBadAssService
+{
+}
+</code></pre>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
@@ -388,9 +417,9 @@
     </div>
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
-            <div>hiny
-                <span>© 2021 S</span>
-                <span class="float-right" style="color: #888888;"></span>
+            <div>
+                <span>© 2021 Shiny.NET</span>
+                <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
     </div>
