--- a/setup/index.html
+++ b/setup/index.html
@@ -91,7 +91,7 @@
                                                             <a href="/setup/uwp">Platform - UWP</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/advanced">Advanced Dependency Injection</a>
+                                                            <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
@@ -299,9 +299,6 @@
                                                             <a href="/sensors/gyroscope">Gyroscope</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/sensors/heartrate">Heart Rate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/sensors/humidity">Humidity</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -358,7 +355,7 @@
         <li><a href="/setup/ios">Platform - iOS</a></li>
         <li><a href="/setup/android">Platform - Android</a></li>
         <li><a href="/setup/uwp">Platform - UWP</a></li>
-        <li><a href="/setup/advanced">Advanced Dependency Injection</a></li>
+        <li><a href="/setup/di">Dependency Injection</a></li>
         <li><a href="/setup/best-practices">Best Practices</a></li>
         <li><a href="/setup/boilerplate">Boilerplate</a></li>
         <li><a href="/setup/logging">Logging</a></li>
@@ -375,9 +372,9 @@
     </div>
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
-            <div>hiny
-                <span>© 2021 S</span>
-                <span class="float-right" style="color: #888888;"></span>
+            <div>
+                <span>© 2021 Shiny.NET</span>
+                <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
     </div>
