--- a/setup/nuget.html
+++ b/setup/nuget.html
@@ -91,7 +91,7 @@
                                                             <a href="/setup/uwp">Platform - UWP</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/advanced">Advanced Dependency Injection</a>
+                                                            <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
@@ -299,9 +299,6 @@
                                                             <a href="/sensors/gyroscope">Gyroscope</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/sensors/heartrate">Heart Rate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/sensors/humidity">Humidity</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -428,11 +425,6 @@
 <td><a href="https://www.nuget.org/packages/Shiny.Push/" target="Shiny.Push"><img src="https://img.shields.io/nuget/v/Shiny.Push.svg?style=for-the-badge" /></a></td>
 </tr>
 <tr>
-<td><strong>Shiny.Push</strong></td>
-<td></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Push/" target="Shiny.Push"><img src="https://img.shields.io/nuget/v/Shiny.Push.svg?style=for-the-badge" /></a></td>
-</tr>
-<tr>
 <td><strong>Shiny.Push.AzureNotificationHubs</strong></td>
 <td></td>
 <td><a href="https://www.nuget.org/packages/Shiny.Push.AzureNotificationHubs/" target="Shiny.Push.AzureNotificationHubs"><img src="https://img.shields.io/nuget/v/Shiny.Push.AzureNotificationHubs.svg?style=for-the-badge" /></a></td>
@@ -441,6 +433,11 @@
 <td><strong>Shiny.Push.FirebaseMessaging</strong></td>
 <td>Push Provider for Firebase Messaging</td>
 <td><a href="https://www.nuget.org/packages/Shiny.Push.FirebaseMessaging/" target="Shiny.Push.FirebaseMessaging"><img src="https://img.shields.io/nuget/v/Shiny.Push.FirebaseMessaging.svg?style=for-the-badge" /></a></td>
+</tr>
+<tr>
+<td><strong>Shiny.Sensors</strong></td>
+<td>Reactive Based Snesors</td>
+<td><a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge" /></a></td>
 </tr>
 <tr>
 <td><strong>Shiny.SpeechRecognition</strong></td>
@@ -481,9 +478,9 @@
     </div>
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
-            <div>hiny
-                <span>© 2021 S</span>
-                <span class="float-right" style="color: #888888;"></span>
+            <div>
+                <span>© 2021 Shiny.NET</span>
+                <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
     </div>
